--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="{{url_for('static', filename='library/bootstrap-3.3.6-dist/css/bootstrap.min.css')}}">
 	<link rel="stylesheet" href="{{url_for('static', filename='library/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css')}}" >
 	<script src="{{url_for('static', filename='library/bootstrap-3.3.6-dist/js/bootstrap.min.js')}}"></script>
+
 	<!-- Custom File -->
+	<script src="{{url_for('static', filename='js/clear.js')}}"></script>
 	<link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
 	<title>SpaceZ - {% block title %}{% endblock %} </title>
 	{% endblock %}
@@ -22,63 +24,85 @@
 		{% block navbar %}
 		<div id="navbar">
 			{% set navigation_bar = [
-			    ('/ranking', 'ranking', 'Rank'),
-			] -%}
-			<!-- {% set active_page = active_page|default('home') -%} -->
+				('/ranking', 'ranking', 'Rank'),
+				] -%}
+				<!-- {% set active_page = active_page|default('home') -%} -->
 
-			<nav class="navbar navbar-default">
-			  <div class="container-fluid">
-			    <!-- Brand and toggle get grouped for better mobile display -->
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			      </button>
-			      <!-- <a href="/home"><img class='nav-logo' src= "{{url_for('static', filename='img/logo_long_128x276.png')}}"></a> -->
-						<a href="/home" class='navbar-brand'>Presenter</a>
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<!-- <a href="/home"><img class='nav-logo' src= "{{url_for('static', filename='img/logo_long_128x276.png')}}"></a> -->
+							<a href="/home" class='navbar-brand'>Presenter</a>
+						</div>
 
-			    </div>
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav">
-			        {% for href, id, caption in navigation_bar %}
-			          <li{% if id == active_page %} class="active"{% endif%}><a href="{{ href|e }}">{{ caption|e }}</a></li>
-			        {% endfor %}
-			      </ul>
-			      <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#">CS3103</a></li>
-			        <li class="dropdown">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
-			            <li><a href="#">Action</a></li>
-			            <li><a href="#">Another action</a></li>
-			            <li><a href="#">Something else here</a></li>
-			            <li role="separator" class="divider"></li>
-			            <li><a href="#">Separated link</a></li>
-			          </ul>
-			        </li>
-			      </ul>
-			    </div><!-- /.navbar-collapse -->
-			  </div><!-- /.container-fluid -->
-			</nav>
-		</div>
+							{% if query%}
+
+							<div class="navbar-form navbar-left">
+
+								<div class="input-group">
+									<div class="form-group has-feedback has-clear">
+										<input type="text" style='width:400px' class=" form-control searchInput" value={{query}} placeholder="Movie Title">
+										<span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+									</div>
+									<span class="input-group-btn">
+										<button type="button" class="submitSearch btn btn-info" id="exampleButton1">Search</button>
+									</span>
+								</div>
+							</div>
+							{% endif %}
+							<ul class="nav navbar-nav navbar-right">
+								{% for href, id, caption in navigation_bar %}
+								<li{% if id == active_page %} class="active"{% endif%}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+								{% endfor %}
+							</ul>
+						</div><!-- /.navbar-collapse -->
+					</div><!-- /.container-fluid -->
+				</nav>
+			</div>
+			{% endblock %}
+			{% block content %}{% endblock %}
+			<footer>
+
+				{% block footer %}
+				<footer class="footer">
+					<div class="container footer-container">
+						<p class="text-muted">Powered by <a href="#">Group15</a></p>
+					</div>
+				</footer>
+				{% endblock %}
+			</div>
+
+
+
+		</body>
+		{% block js %}
+		<script>
+		$('.has-clear input[type="text"]').on('input propertychange', function() {
+			var $this = $(this);
+			var visible = Boolean($this.val());
+			$this.siblings('.form-control-clear').toggleClass('hidden', !visible);
+		}).trigger('propertychange');
+
+		$('.form-control-clear').click(function() {
+			$(this).siblings('input[type="text"]').val('')
+			.trigger('propertychange').focus();
+		});
+		$(document).on('click', '.submitSearch', function() {
+			var query = $('.searchInput').first().val();
+			if(query!=null && query.trim()!='') {
+				window.location.href = "/result?query="+query;
+			}
+		});
+		</script>
 		{% endblock %}
-		{% block content %}{% endblock %}
-		<footer>
-
-		{% block footer %}
-		<footer class="footer">
-      		<div class="container footer-container">
-        	<p class="text-muted">Powered by <a href="#">Group15</a></p>
-      		</div>
-    	</footer>
-    	{% endblock %}
-	</div>
-
-
-
-</body>
-</html>
+		</html>
