--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -4,20 +4,27 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
-	<div class='max-space'>
+	<div class='max-space-with-pic'>
 	  <div class="jumbotron pic-title">
       <div class='row'>
-        <div class='col-md-offset-3 col-md-6'>
-      <div class="input-group">
-      <input type="text" class="form-control input-lg" placeholder="Search for...">
-      <span class="input-group-btn">
-        <button class="btn btn-default btn-lg" type="button">Go!</button>
-      </span>
-        </div>
+        <div class='col-md-offset-2 col-md-8 col-xs-offset-1 col-xs-10'>
+            <div class="input-group">
+              <div class="form-group has-feedback has-clear">
+                <input type="text" class="searchInput form-control input-lg" placeholder="Movie title...">
+                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+              </div>
+              <span class="input-group-btn">
+                <button class="submitSearch btn btn-default btn-lg" type="submit">Go!</button>
+              </span>
       </div>
     </div><!-- /input-group -->
 	  </div>
     </div>
+  </div>
 
 
+{% endblock %}
+
+{% block js %}
+{{ super() }}
 {% endblock %}
