--- a/webapp/static/css/global.css
+++ b/webapp/static/css/global.css
@@ -120,3 +120,25 @@ html, body{
   pointer-events: auto;
   cursor: pointer;
 }
+
+.hori-divider {
+	padding-bottom:10px;
+	border-bottom: 1px solid #ccc;
+}
+
+.vert-divider {
+	padding-left:50px;
+	border-left: 1px dashed #ccc;
+}
+
+.result-space {
+	padding-top: 20px;
+}
+.result-entry {
+	padding-top: 20px;
+}
+
+.empty-result {
+	font-size: 18px
+
+}
