resolve a bug that result page will be directed to hyperlink as well

--- a/webapp/templates/result.html
+++ b/webapp/templates/result.html
@@ -27,7 +27,7 @@
           {% endif%}
           <div onclick="go('{{result.url}}')" class='result-entry'>
             <div class='result-header'>
-              <a href="{{result.url}}">
+              <a href="#">
                 {{result.title}} | {{result.domain}}
               </a>
             </div>
