--- a/webapp/templates/result.html
+++ b/webapp/templates/result.html
@@ -7,10 +7,11 @@
 <div class='max-space'>
   {% if isBlur %}
   <div class="alert alert-info" role="alert">
-    Note: Do you mean <strong>{{rankedMovieTitles[0].title | e}}</strong> instead of <strong>{{query | e}}</strong>[{{rankedMovieTitles[0].rank}}]?
-    <br/>Here are other suggestions:
+    Note: Do you mean <a href='/result?query={{rankedMovieTitles[0].title}}'><strong>{{rankedMovieTitles[0].title | e}}</strong></a> instead of <strong>{{query | e}}</strong>?
+    {% if rankedMovieTitles | length > 1%}<br/>Here are other suggestions:{% endif %}
     {% for rankedMovie in rankedMovieTitles[1:] %}
-    <a href='/result?query={{rankedMovie.title}}'>{{loop.index}}. {{rankedMovie.title | e}}[{{rankedMovie.rank | round(2) }}]</a> |
+    <!-- [{{rankedMovie.rank | round(2) }}] -->
+    <a href='/result?query={{rankedMovie.title}}'>{{loop.index}}. {{rankedMovie.title | e}}</a> |
     {% endfor %}
   </div>
   {% endif %}
