--- a/webapp/templates/result.html
+++ b/webapp/templates/result.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <div class='max-space'>
-  {% if isBlur %}
+  {% if isBlur and not isDbEmpty%}
   <div class="alert alert-info" role="alert">
     Note: Do you mean <a href='/result?query={{rankedMovieTitles[0].title}}'><strong>{{rankedMovieTitles[0].title | e}}</strong></a> instead of <strong>{{query | e}}</strong>?
     {% if rankedMovieTitles | length > 1%}<br/>Here are other suggestions:{% endif %}
@@ -29,13 +29,16 @@
           <div  class='result-entry'>
             <div onclick="go('{{result.url}}')" class='result-header'>
               <a href="#">
-                {{result.itemReviewed.name}} | {{result.publisher.name}}
+                {{result.itemReviewed.name}} | {{result.publisher.name}} | {{result.rank}}
               </a>
             </div>
             <p>{{result.description or 'No description found'}}</p>
           </div>
         {% else %}
         <div class='empty-result'>
+          {%if isDbEmpty %}
+          <h3>DB is unconnected or empty</h3>
+          {%else%}
           <h3>We could not match any documents for your search - <span class="label label-info">{{query | e}}</span></h3>
           <br/>
           <strong>Suggestions</strong>:
@@ -44,6 +47,7 @@
           <br/>
           - Try different movies.
           <br/>
+          {% endif%}
         </div>
 
         {% endfor %}
