--- a/webapp/templates/result.html
+++ b/webapp/templates/result.html
@@ -29,7 +29,7 @@
           <div  class='result-entry'>
             <div onclick="go('{{result.url}}')" class='result-header'>
               <a href="#">
-                {{result.itemReviewed.name}} | {{result.publisher.name}} | {{result.rank}}
+                {{result.itemReviewed.name}} | {{result.publisher.name}}
               </a>
             </div>
             <p>{{result.description or 'No description found'}}</p>
